# wob

./: Cargo.toml  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
cli/: .gitignore  Cargo.toml
cli/examples/: .gitignore  full.toml
cli/src/: config.rs  lib.rs
cli/src/core/: context.rs  mod.rs
cli/src/providers/: blockfrost.rs  carp.rs  mod.rs  node.rs  ogmios.rs  prelude.rs  proxy.rs  scrolls.rs
cli/src/tests/: mod.rs  pulling.rs  running.rs  utils.rs
proxy/: .gitignore  .prettierrc  Dockerfile  nodemon.json  package-lock.json  package.json  reference.backup  reference.ts  tsconfig.json  tsoa.json
proxy/src/: app.ts  index.ts  ioc.ts  routes.ts
proxy/src/api/: errors.ts  middlewares.ts  responses.ts
proxy/src/controllers/: accountController.ts  addressController.ts  assetsController.ts  blockController.ts  blockfrostController.ts  carpController.ts  dexController.ts  ogmiosController.ts  poolController.ts  poolsController.ts  scrollsController.ts  tokenRegistryController.ts  transactionController.ts
proxy/src/dataSource/: blockfrost.ts  carp.ts  ogmios.ts  scrolls.ts  tokenRegistry.ts
proxy/src/model/: blockfrost.ts  carp.ts  ogmios.ts  requests.ts  scrolls.ts  tokenRegistry.ts
proxy/src/routers/: blockfrostRouter.ts  carpRouter.ts  ogmiosRouter.ts  oneBoxRouter.ts  scrollsRouter.ts  tokenRegistryRouter.ts
proxy/src/services/: blockfrostService.ts  carpService.ts  ogmiosService.ts  scrollsService.ts  (+1 more)
src/core/: context.rs  mod.rs
src/providers/: mod.rs  node.rs  ogmios.rs
src/tests/: pulling.rs
(+13 files in other folders)
