[package]
name = "onebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14.0"
clap = { version = "4.1.6", features = ["derive"] }
config = "0.13.3"
futures = "0.3.26"
indicatif = "0.17.3"
miette = { version = "5.5.0", features = ["fancy"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt", "macros"] }
tracing = "0.1.37"
tracing-indicatif = "0.3.0"
tracing-subscriber = "0.3.16"

[dev-dependencies]
uuid = { version = "1.3.0", features = ["v4"] }
